use template variables

--- a/ch2/index.ejs
+++ b/ch2/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Index</title>
+  <title><%=title %></title>
   <style>
     h1 {
       font-size: 60pt;
@@ -19,11 +19,10 @@
 </head>
 <body>
   <header>
-    <h1>Index</h1>
+    <h1><%=title %></h1>
   </header>
   <div role="main">
-    <p>This is Index Page.</p>
-    <p>これは、EJSを使ったWebページです。</p>
+    <p><%=content %></p>
   </div>
 </body>
 </html>
