--- a/ch2/index.ejs
+++ b/ch2/index.ejs
@@ -3,19 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title><%=title %></title>
-  <style>
-    h1 {
-      font-size: 60pt;
-      color: #eee;
-      text-align: right;
-      margin: 0;
-    }
-    body {
-      font-size: 14pt;
-      color: #999;
-      margin: 5px;
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <header>
