--- a/ch2/index.ejs
+++ b/ch2/index.ejs
@@ -11,6 +11,7 @@
   </header>
   <div role="main">
     <p><%=content %></p>
+    <p><a href="/other">Other Pageに移動 &gt;&gt;</a></p>
   </div>
 </body>
 </html>
