add form post feature

--- a/ch3/index.ejs
+++ b/ch3/index.ejs
@@ -11,7 +11,12 @@
   </header>
   <div role="main">
     <p><%=content %></p>
-    <p><a href="/other">Other Pageに移動 &gt;&gt;</a></p>
+    <form method="post" action="/other">
+      <p>
+        <input type="text" name="msg">
+        <input type="submit" value="Submit">
+      </p>
+    </form>
   </div>
 </body>
 </html>
