dataイベントのデータの内容を確認
key=value形式
keyは、form要素のname属性に対応

--- a/ch3/index.ejs
+++ b/ch3/index.ejs
@@ -13,7 +13,7 @@
     <p><%=content %></p>
     <form method="post" action="/other">
       <p>
-        <input type="text" name="msg">
+        <input type="text" name="msgaaaa">
         <input type="submit" value="Submit">
       </p>
     </form>
