--- a/ch3/index.ejs
+++ b/ch3/index.ejs
@@ -11,12 +11,14 @@
   </header>
   <div role="main">
     <p><%=content %></p>
-    <form method="post" action="/other">
-      <p>
-        <input type="text" name="msgaaaa">
-        <input type="submit" value="Submit">
-      </p>
-    </form>
+    <table>
+      <% for(var key in data) { %>
+        <tr>
+          <th><%=key %></th>
+          <td><%=data[key] %></td>
+        </tr>
+      <% } %>
+    </table>
   </div>
 </body>
 </html>
