--- a/ch3/style.css
+++ b/ch3/style.css
@@ -15,3 +15,21 @@ p {
   font-size: 14pt;
   margin: 0 20px;
 }
+
+table {
+  margin: 20px;
+}
+
+table tr th {
+  background-color: #999;
+  color: #fff;
+  text-align: center;
+  padding: 3px 10px;
+}
+
+table tr td {
+  background-color: #eee;
+  color: #666;
+  text-align: left;
+  padding: 3px 10px;
+}
