--- a/ch3/index.ejs
+++ b/ch3/index.ejs
@@ -13,10 +13,7 @@
     <p><%=content %></p>
     <table>
       <% for(var key in data) { %>
-        <tr>
-          <th><%=key %></th>
-          <td><%=data[key] %></td>
-        </tr>
+        <%- include('data_item', {key:key, val:[data[key]]}) %>
       <% } %>
     </table>
   </div>
