change table layout

--- a/ch3/data_item.ejs
+++ b/ch3/data_item.ejs
@@ -1,4 +1,6 @@
-<tr>
-  <th><%= key %></th>
-  <td><%= val[0] %></td>
-</tr>
+<table>
+  <tr><th><%= key %></th></tr>
+  <% for(var i in val) { %>
+    <tr><td><%= val[i] %></td></tr>
+  <% } %>
+</table>
