add partial to other page

--- a/ch3/other.ejs
+++ b/ch3/other.ejs
@@ -10,7 +10,11 @@
   <h1><%=title %></h1>
 </header>
 <div role="main">
-  <p><%=content %></p>
+  <table>
+    <% for(var key in data) { %>
+      <%- include('data_item', {key: key, val: data[key]}) %>
+    <% } %>
+  </table>
 </div>
 </body>
 </html>
