add rendering cookie

--- a/ch3/index.ejs
+++ b/ch3/index.ejs
@@ -15,6 +15,9 @@
       <tr><th>伝言です！</th></tr>
       <tr><td><%= data.msg %></td></tr>
     </table>
+
+    <p>your last message: <%= cookie_data %></p>
+
     <form action="/" method="post">
       MESSAGE <input type="text" name="msg">
       <input type="submit" value="送信">
