--- a/ch4/express-app/views/index.ejs
+++ b/ch4/express-app/views/index.ejs
@@ -11,6 +11,7 @@
   </header>
   <main>
     <p><%- content %></p>
+    <p><a href="<%= link.href %>"><%= link.text %></a></p>
   </main>
 </body>
 </html>
