add form submit function

--- a/ch5/ex-gen-app/views/hello.ejs
+++ b/ch5/ex-gen-app/views/hello.ejs
@@ -11,6 +11,10 @@
   </header>
   <main>
     <p><%- content %></p>
+    <form action="/hello/post" method="post">
+      <input type="text" name="message">
+      <input type="submit" value="送信">
+    </form>
   </main>
 </body>
 </html>
