--- a/ch5/ex-gen-app/views/hello.ejs
+++ b/ch5/ex-gen-app/views/hello.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title><%= title %></title>
-  <script src="/jquery"></script>
+  <script src="/javascripts/jquery.min.js"></script>
   <link rel="stylesheet" href="/stylesheets/style.css">
   <script>
     $(function() {
