--- a/ch5/ex-gen-app/views/hello.ejs
+++ b/ch5/ex-gen-app/views/hello.ejs
@@ -10,16 +10,17 @@
     <h1><%= title %></h1>
   </header>
   <main>
-    <% if (content !== null) { %>
-      <ol>
-        <% for(var i in content) { %>
-          <% var obj = content[i]; %>
-          <li>
-            <a href="<%= obj.link %>"><%= obj.title %></a>
-          </li>
-        <% } %>
-      </ol>
-    <% } %>
+    <table>
+      <% for(var i in content) { %>
+      <tr>
+        <% var obj = content[i] %>
+        <th><%= obj.id %></th>
+        <td><%= obj.name %></td>
+        <td><%= obj.mail %></td>
+        <td><%= obj.age %></td>
+      </tr>
+      <% } %>
+    </table>
   </main>
 </body>
 </html>
