--- a/ch6/ex-gen-app/views/hello/add.ejs
+++ b/ch6/ex-gen-app/views/hello/add.ejs
@@ -14,15 +14,15 @@
     <form action="/hello/add" method="post">
       <p>
         <label for="name">Name</label>
-        <input type="text" name="name" id="name">
+        <input type="text" name="name" id="name" value="<%= form.name %>">
       </p>
       <p>
         <label for="mail">Mail</label>
-        <input type="email" name="mail" id="mail">
+        <input type="text" name="mail" id="mail" value="<%= form.mail %>">
       </p>
       <p>
         <label for="age">Age</label>
-        <input type="number" name="age" id="age">
+        <input type="text" name="age" id="age" value="<%= form.age %>">
       </p>
       <p>
         <input type="submit" value="作成">
