--- a/ch6/ex-gen-app/views/hello/add.ejs
+++ b/ch6/ex-gen-app/views/hello/add.ejs
@@ -10,7 +10,7 @@
     <h1><%= title %></h1>
   </header>
   <main>
-    <p><%= content %></p>
+    <p><%- content %></p>
     <form action="/hello/add" method="post">
       <p>
         <label for="name">Name</label>
