--- a/ch6/ex-gen-app/views/hello/add.ejs
+++ b/ch6/ex-gen-app/views/hello/add.ejs
@@ -18,11 +18,11 @@
       </p>
       <p>
         <label for="mail">Mail</label>
-        <input type="text" name="mail" id="mail" value="<%= form.mail %>">
+        <input type="email" name="mail" id="mail" value="<%= form.mail %>">
       </p>
       <p>
         <label for="age">Age</label>
-        <input type="text" name="age" id="age" value="<%= form.age %>">
+        <input type="number" name="age" id="age" value="<%= form.age %>">
       </p>
       <p>
         <input type="submit" value="作成">
