--- a/ch6/ex-gen-app/views/hello/index.ejs
+++ b/ch6/ex-gen-app/views/hello/index.ejs
@@ -13,7 +13,7 @@
     <table>
       <% for(var i in content) { %>
       <tr>
-        <% var obj = content[i] %>
+        <% var obj = content[i].attributes; %>
         <th><%= obj.id %></th>
         <td><%= obj.name %></td>
         <td><%= obj.mail %></td>
