add pagination links

--- a/ch6/ex-gen-app/views/hello/index.ejs
+++ b/ch6/ex-gen-app/views/hello/index.ejs
@@ -21,6 +21,15 @@
       </tr>
       <% } %>
     </table>
+    <div>
+      <span><a href="/hello/1">&lt;&lt; First</a></span>
+      |
+      <span><a href="/hello/<%= pagination.page - 1 %>">&lt;&lt; Prev</a></span>
+      |
+      <span><a href="/hello/<%= pagination.page + 1 %>">Next &gt;&gt;</a></span>
+      |
+      <span><a href="/hello/<%= pagination.pageCount %>">Last &gt;&gt;</a></span>
+    </div>
   </main>
 </body>
 </html>
