--- a/ch7/mini_board_2/views/index.ejs
+++ b/ch7/mini_board_2/views/index.ejs
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<head>
+  <title><%= title %></title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+<body>
+  <header>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+  </header>
+  <main>
+    <h2>Welcome to <%= login.name %>.</h2>
+    <form method="post" action="/">
+      <input type="text" name="msg" size="50">
+      <input type="submit" value="送信">
+    </form>
+
+    <hr>
+
+    <table style="width: 95%;">
+      <% for(var i in collection) { %>
+        <%- include('data_item', {val: collection[i]}) %>
+      <% } %>
+    </table>
+
+    <p>
+      <% if (pagination.page > 1) { %>
+        <span><a href="/<%= pagination.page - 1 %>">&lt;&lt; prev</a></span>
+      <% } else { %>
+        <span>&lt;&lt; prev</span>
+      <% } %>
+      |
+      <% if (pagination.page < pagination.pageCount) { %>
+        <span><a href="/<%= pagination.page + 1 %>">Next &gt;&gt;</a></span>
+      <% } else { %>
+        <span>Next &gt;&gt;</span>
+      <% } %>
+    </p>
+  </main>
+</body>
 </html>
