--- a/ch7/mini_board_2/public/stylesheets/style.css
+++ b/ch7/mini_board_2/public/stylesheets/style.css
@@ -1,8 +1,47 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
 a {
   color: #00B7FF;
 }
+a.home {
+  color: #fff;
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 60pt;
+  color: #eee;
+  text-align: right;
+  marign: 0;
+}
+h2 {
+  font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+body {
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: #999;
+  marign: 5px;
+}
+p {
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0 20px;
+}
+
+table {
+  margin: 20px;
+}
+table tr th {
+  background-color: #999;
+  color: #fff;
+  text-align: center;
+  padding: 5px 10px;
+}
+table tr td {
+  background: #eee;
+  color: #666;
+  text-align: left;
+  padding: 5px 10px;
+}
+.error {
+  color: #f00;
+}
+
