--- a/ch7/mini_board_2/views/data_item.ejs
+++ b/ch7/mini_board_2/views/data_item.ejs
@@ -14,7 +14,7 @@
   var dstr =
     d.getFullYear() + '-' +
     (d.getMonth() + 1) + '-' +
-    d.getDate() + ' '
+    d.getDate() + ' ' +
     d.getHours() + ':' +
     d.getMinutes() + ':' +
     d.getSeconds();
